# aegis-shell

./: .gitignore  LICENSE  MANIFEST.in  README.md  aegis_shell.py  aegis_shell_gui.py  build_installer.py  build_mac.sh  install.ps1  install.sh  installer.py  pyproject.toml  requirements.txt  setup.py  test_aegis.py  test_output.txt
assets/: icon.icns
commands/: command_handler.py  faq.py
config/: commands_mapping.json
features/: aegis_scripts.py  ai_features.py  analytics.py  audit_log.py  command_detection.py  command_executor.py  config_manager.py  credential_manager.py  dev_tools.py  dev_workflow.py  documentation.py  env_detector.py  error_handler.py  help_system.py  hooks.py  integrations.py  learning.py  macros.py  package_manager.py  platform.py  prompt_builder.py  session_recorder.py  session_vars.py  system_dashboard.py  system_monitor.py  testing.py  themes.py  ui_enhancements.py
llm/: llm_handler.py
resources/: ascii_art.txt
utils/: command_executor.py  download_animation.py  gui_download_support.py  router.py  security_manager.py  system_monitor.py
