[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aegis-shell"
version = "1.0.0"
description = "AI-powered terminal shell — run anything, anywhere"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tanish Poddar" },
    { name = "Nidhi Nayana" },
    { name = "Nishant Ranjan" },
]
keywords = ["shell", "terminal", "ai", "cli", "groq", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "prompt_toolkit>=3.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "typing-extensions>=4.12.2",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
aegis = "aegis_shell:main"

[project.urls]
Homepage   = "https://github.com/tanishpoddar/aegis-shell"
Repository = "https://github.com/tanishpoddar/aegis-shell"
Issues     = "https://github.com/tanishpoddar/aegis-shell/issues"

[tool.setuptools]
py-modules = ["aegis_shell", "config_loader"]

[tool.setuptools.packages.find]
where    = ["."]
include  = ["features*", "utils*", "llm*", "commands*"]
exclude  = ["tests*", "build*", "dist*"]

[tool.setuptools.package-data]
"config" = ["*.json"]
